--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
-body {
-  font-family: 'Titillium Web', sans-serif;
+#onetrust-pc-sdk {
+  font-family: 'Titillium Web', sans-serif !important;
+  height: 600px;
+}
+
+#onetrust-banner-sdk {
+  font-family: 'Titillium Web', sans-serif !important;
 }
 
 .MuiTypography-root {
