--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 #onetrust-consent-sdk #onetrust-banner-sdk {
   font-family: 'Titillium Web', sans-serif !important;
 }
-
+/*
 .MuiTypography-root {
   line-height: 1.5 !important;
 }
+*/
