SELC-1294 onetrust font

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-#onetrust-consent-sdk #onetrust-banner-sdk {
+#onetrust-consent-sdk {
   font-family: 'Titillium Web', sans-serif !important;
 }
 /*
