[SELC-1294] cookie banner Titillium Web font family
* SELC-1294 cookie banner Titillium font family

* SELC-1294 add important to font family

* SELC-1394 important style

* SELC-1294 import index .css

* SELC-1294 onetrust font

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
-.MuiTypography-root{
+#onetrust-consent-sdk {
+  font-family: 'Titillium Web', sans-serif !important;
+}
+/*
+.MuiTypography-root {
   line-height: 1.5 !important;
 }
+*/
