--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,93 @@
+/* START: ONETRUST STYLES */
+
 #onetrust-consent-sdk {
   font-family: 'Titillium Web', sans-serif !important;
 }
-/*
-.MuiTypography-root {
-  line-height: 1.5 !important;
+
+.otnotice .otnotice-content {
+  font-family: 'Titillium Web', sans-serif;
+  color: #17324d;
+  padding: 40px;
 }
-*/
+
+.otnotice {
+  background: #f8f8f8;
+}
+
+.otnotice .otnotice-content .otnotice-menu {
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  max-height: none;
+  margin-left: 0;
+  padding-top: 0;
+  width: 310px;
+  max-height: 80%;
+  overflow-y: auto;
+  background: #f8f8f8;
+  border: 1px solid #eee;
+  -moz-box-shadow: 0 7px 10px 0 rgba(124, 124, 124, .2);
+  box-shadow: 0 7px 10px 0 rgba(124, 124, 124, .2);
+  margin-left: 50px;
+  padding-top: 39px;
+  padding-left: 28px;
+  padding-right: 19px;
+  padding-bottom: 49px;
+  display: block;
+  position: fixed;
+}
+
+.otnotice .otnotice-content .otnotice-menu-mobile {
+  background-color: transparent;
+  border: none;
+  box-shadow: rgb(0 43 85 / 10%) 0px 2px 4px -1px, rgb(0 43 85 / 5%) 0px 4px 5px;
+}
+
+.otnotice .otnotice-content .otnotice-menu-mobile .otnotice-menu-mobile-container {
+  background-color: transparent;
+}
+
+.otnotice .otnotice-content .otnotice-menu > .otnotice-menu-section {
+  margin: 0;
+  padding: 1rem;
+  width: 100%;
+}
+
+.otnotice .otnotice-content .otnotice-menu > .otnotice-menu-section:hover,
+.otnotice .otnotice-content .otnotice-menu-mobile .otnotice-menu-section-mobile:hover {
+  background-color: rgba(23, 50, 77, 0.08);
+}
+
+.otnotice .otnotice-content .otnotice-menu > .otnotice-menu-section a,
+.otnotice .otnotice-content .otnotice-menu-mobile .otnotice-menu-selected,
+.otnotice .otnotice-content .otnotice-menu-mobile .otnotice-menu-section-mobile a {
+  font-size: 1.125rem;
+  font-weight: 600;
+  line-height: 1.5;
+  color: #17324d !important;
+}
+
+.otnotice-menu-mobile .otnotice-menu-selected-container .otnotice-menu-display__expand::after,
+.otnotice-menu-mobile .otnotice-menu-selected-container .otnotice-menu-display__collapse::after {
+  color: #17324d !important;
+}
+
+.otnotice .otnotice-content .otnotice-section:first-child h2 {
+  font-size: 2.375rem;
+  color: #17324d;
+  line-height: 3.25rem;
+}
+
+.otnotice .otnotice-content .otnotice-section:not(:first-child) h2 {
+  font-size: 1.75rem;
+  color: #17324d;
+  line-height: 2.25rem;
+}
+
+#onetrust-banner-sdk:focus {
+  outline: none !important;
+  outline-offset: 0 !important;
+}
+
+/* END: ONETRUST STYLES */
